# AI-for-SWEs

./: README.md  pyproject.toml
apps/: 1-app-query.py  2-app-front-end.py  3-app-local.py  4-app-convo.py  5-app-convo-burr.py  5-app-convo-log.py  6-app-convo-option.py  6-app-rate-answer.py  7-app-rate-answer.py  burr-app-convo.py.ipynb
apps/data/: hba.txt  o1.txt
email_assistant/: requirements.txt
email_assistant/v1/: README.md  app.py  assistant.py  pipeline.py  pipeline_gold.py
email_assistant/v2/: README.md  app.py  assistant.py  assistant_gold.py  pipeline.py  pipeline_gold.py  test_pipeline.py  test_pipeline_gold.py
email_assistant/v3/: README.md  app.py  assistant.py  assistant_gold.py
notebooks/: 00-AI-for-SWEs.ipynb  01-Chatting-with-LLMs.ipynb  02-AI-for-SWEs.ipynb  logic.py  profiles.csv  requirements_test.txt  test.ipynb  test_logic.py  test_logic_old.py
notebooks/data/: chipLI.txt  dagworks.txt  hamelLI.txt  hbaLI.txt  shreyaLI.txt  stefanLI.txt
