[tool.poetry]
name = "pdf-query"
version = "0.1.0"
description = ""
authors = ["hugobowne <hugobowne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.44.0"
llama-index = "^0.11.9"
pymupdf = "^1.24.10"
llama-index-llms-ollama = "^0.3.2"
sentence-transformers = "^3.1.1"
llama-index-embeddings-huggingface = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
